--- a/css/style.less
+++ b/css/style.less
@@ -265,8 +265,9 @@
 		grid-column-start: 2;
 		grid-column-end: 12;
 
-		&__short {
-			grid-column-end: 5;
+		&-short {
+			grid-column-end: 3;
+			margin-right: -14px;
 		}
 
 		&__input {
