Button disabling when book description or price are empty when their checkbox are checked

--- a/css/style.less
+++ b/css/style.less
@@ -174,8 +174,8 @@
 					background: linear-gradient(#777 0%, #000 100%);
 					border-radius: 50%;
 					width: 50px;
-					height: 35px;
-					padding-top: 15px;
+					height: 36px;
+					padding-top: 14px;
 				}
 			}
 		}
@@ -385,7 +385,7 @@
 			&__checkbox:checked + &__fake-checkbox::before {
 				display: block;
 				content: "✓";
-				font-family: 'Times New Roman';
+				font-family: 'Times New Roman' !important;
 				font-size: 2rem;
 				color: #000;
 				margin-top: -15px;
