BEM renaming: specially modificators

--- a/css/style.less
+++ b/css/style.less
@@ -55,6 +55,7 @@
 	}
 
 	.h2 {
+		font-family: 'IBM Plex Sans';
 		font-weight: normal;
 	}
 
@@ -121,7 +122,7 @@
 			padding: 5px;
 			background: #fff2d5;
 
-			&-month-book-color {
+			&_month-book-color {
 				background: #fcc;
 			}
 
@@ -130,10 +131,7 @@
 					font-family: 'IBM Plex Serif Italic';
 					font-style: italic;
 					font-size: .75rem;
-
-					&:not(empty) {
-						margin-bottom: .45rem;
-					}
+					margin-bottom: .45rem;
 				}
 
 				&__title {
@@ -156,7 +154,7 @@
 				text-align: center;
 				color: #fff;
 
-				&-for-new {
+				&_new {
 					z-index: 1;
 					top: -25px;
 					right: -20px;
@@ -167,7 +165,7 @@
 					transform: rotate(25deg);
 				}
 
-				&-for-price {
+				&_price {
 					z-index: 2;
 					bottom: -5px;
 					right: -10px;
@@ -219,7 +217,7 @@
 		}
 	}
 
-	.book-adding {
+	.book-editing {
 		font-family: 'IBM Plex Sans';
 		margin-bottom: 75px;
 		display: grid;
@@ -272,7 +270,7 @@
 		}
 	}
 
-	.book-editing {
+	/*.book-editing {
 		font-family: 'IBM Plex Sans';
 		margin-bottom: 50px;
 		display: grid;
@@ -298,7 +296,7 @@
 			grid-column-start: 5;
 			grid-column-end: 15;
 		}
-	}
+	}*/
 }
 
 
