Admin view of home page

--- a/css/style.less
+++ b/css/style.less
@@ -176,6 +176,23 @@
 					padding-top: 14px;
 				}
 			}
+
+			&__admin {
+				font-family: 'IBM Plex Sans';
+				font-size: 1rem;
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				height: 26%;
+				padding: 7px 5px;
+				background: rgba(255, 255, 255, .75);
+
+				&__editLinkWrap {
+					margin-top: 3px;
+					padding-left: 28.75px;
+				}
+			}
 		}
 
 		&__map {
