Rollback of book editing, better search

--- a/css/style.less
+++ b/css/style.less
@@ -35,7 +35,7 @@
 }
 
 .page {
-	overflow-x: scroll;
+	overflow-y: scroll;
 	margin: 15px;
 	font-size: 16px;
 
@@ -250,13 +250,13 @@
 		}
 
 		&__map {
-			margin-top: 15px;
+			margin-top: 30px;
 			grid-column-start: 1;
 			grid-column-end: 4;
 		}
 
 		&__description {
-			margin-top: -1px;
+			margin-top: 16px;
 			font-family: 'IBM Plex Serif';
 			grid-column-start: 4;
 			grid-column-end: 8;
