Better search: by author is more important, by two params simultaneously, sticked footer when no found

--- a/css/style.less
+++ b/css/style.less
@@ -118,6 +118,12 @@
 		grid-template-columns: repeat(7, 1fr);
 		grid-gap: 15px;
 
+		&_bottom-sticked {
+			position: absolute;
+			bottom: 0;
+			width: 1200px;
+		}
+
 		&__item {
 			position: relative;
 			display: flex;
