--- a/css/style.less
+++ b/css/style.less
@@ -28,21 +28,51 @@
 
 
 // Общее
+@col-3: ~"(min-width: 535px)";
+@col-4: ~"(min-width: 711px)";
+@col-5: ~"(min-width: 892px)";
+@col-6: ~"(min-width: 1060px)";
+@col-7: ~"(min-width: 1230px)";
+
+@small: ~"(min-width: 576px)";
+@medium: ~"(min-width: 768px)";
+@large: ~"(min-width: 992px)";
+@extraLarge: ~"(min-width: 1200px)";
+
 .border-radius(@radius) {
 	-webkit-border-radius: @radius;
 	-moz-border-radius: @radius;
 	border-radius: @radius;
 }
 
+.html {
+	font-size: 16px;
+}
+
 .page {
 	overflow-y: scroll;
 	margin: 15px;
-	font-size: 16px;
 
-	@media (min-width: 1230px) {
-		width: 1200px;
+	@media @col-3 {
+		width: 505px;
 		margin-left: auto;
 		margin-right: auto;
+	}
+
+	@media @col-4 {
+		width: 682px;
+	}
+
+	@media @col-5 {
+		width: 855px;
+	}
+
+	@media @col-6 {
+		width: 1030px;
+	}
+
+	@media @col-7 {
+		width: 1200px;
 	}
 
 	.h1 {
@@ -89,16 +119,16 @@
 	.search {
 		display: flex;
 		justify-content: space-between;
-		height: 50px;
+		height: 3.15rem;
 		margin-bottom: 15px;
 
 		&__icon {
-			width: 30px;
-			height: 50px;
+			width: 1.9rem;
+			height: 1.9rem;
 		}
 
 		&__form {
-			width: calc(100% - 40px);
+			width: calc(100% - 2.5rem);
 
 			.input {
 				width: 100%;
@@ -116,8 +146,31 @@
 	.grid {
 		position: relative;
 		display: grid;
-		grid-template-columns: repeat(7, 1fr);
-		grid-gap: 15px;
+		grid-template-columns: repeat(1, 1fr);
+		grid-gap: 30px;
+
+		@media @col-3 {
+			grid-template-columns: repeat(3, 1fr);
+			grid-gap: 15px;
+		}
+
+		@media @col-4 {
+			grid-template-columns: repeat(4, 1fr);
+		}
+
+		@media @col-5 {
+			grid-template-columns: repeat(5, 1fr);
+		}
+
+		@media @col-6 {
+			grid-template-columns: repeat(6, 1fr);
+			//grid-row-gap: 30px;
+		}
+
+		@media @col-7 {
+			grid-row-gap: 15px;
+			grid-template-columns: repeat(7, 1fr);
+		}
 
 		&__item {
 			position: relative;
@@ -125,9 +178,16 @@
 			flex-direction: column;
 			justify-content: space-between;
 			box-sizing: border-box;
-			min-height: 255px;
-			padding: 5px;
+			max-width: 290px;
+			height: 465px;
+			padding: .5rem;
 			background: #fff2d5;
+
+			@media @col-3 {
+				max-width: 159px;
+				max-height: 255px;
+				padding: .3rem;
+			}
 
 			&_month-book-color {
 				background: #fcc;
@@ -150,12 +210,17 @@
 
 				&__text {
 					font-family: 'IBM Plex Sans';
-					font-size: 1.2rem;
+					font-size: 2.1rem;
 					position: absolute;
-					bottom: 30px;
+					bottom: 52px;
 					left: 0;
 					right: 0;
 					padding-left: 6px;
+
+					@media @col-3 {
+						font-size: 1.2rem;
+						bottom: 30px;
+					}
 				}
 			}
 
@@ -167,22 +232,35 @@
 				&__author {
 					font-family: 'IBM Plex Serif Italic';
 					font-style: italic;
-					font-size: .75rem;
+					font-size: 1.4rem;
 					margin-bottom: .45rem;
+
+					@media @col-3 {
+						font-size: .75rem;
+					}
 				}
 
 				&__title {
-					max-height: 165px;
+					max-height: 309px;
 					overflow: hidden;
 					text-overflow: ellipsis;
 					font-family: 'IBM Plex Serif';
-					font-size: 1.15rem;
+					font-size: 2.1rem;
+
+					@media @col-3 {
+						max-height: 165px;
+						font-size: 1.15rem;
+					}
 				}
 			}
 
 			&__publishing {
 				font-family: 'IBM Plex Serif';
-				font-size: .75rem;
+				font-size: 1.4rem;
+
+				@media @col-3 {
+					font-size: .75rem;
+				}
 			}
 
 			&__sticker {
@@ -190,6 +268,11 @@
 				position: absolute;
 				text-align: center;
 				color: #fff;
+				font-size: 2rem;
+
+				@media @col-3 {
+					font-size: 1rem;
+				}
 
 				&_new {
 					z-index: 1;
@@ -208,9 +291,15 @@
 					right: -10px;
 					background: linear-gradient(#777 0%, #000 100%);
 					border-radius: 50%;
-					width: 50px;
-					height: 36px;
-					padding-top: 14px;
+					width: 100px;
+					height: 72px;
+					padding-top: 28px;
+
+					@media @col-3 {
+						width: 50px;
+						height: 36px;
+						padding-top: 14px;
+					}
 				}
 			}
 
@@ -258,18 +347,56 @@
 
 		&__map {
 			margin-top: 30px;
-			grid-column-start: 1;
-			grid-column-end: 4;
+
+			@media @col-3 {
+				grid-column-start: 1;
+				grid-column-end: 12;
+			}
+
+			@media @col-6 {
+				grid-column-start: 1;
+				grid-column-end: 3;
+			}
+
+			@media @col-7 {
+				grid-column-start: 1;
+				grid-column-end: 4;
+			}
 		}
 
 		&__description {
-			margin-top: 16px;
-			grid-column-start: 4;
-			grid-column-end: 8;
 			font-family: 'IBM Plex Sans';
+			margin-top: 0px;
 
 			p {
-				line-height: 1.5rem;
+				font-size: 1.3rem;
+				line-height: 2rem;
+
+				@media @col-3 {
+					font-size: 1rem;
+					line-height: 1.5rem;
+				}
+			}
+
+			@media @col-3 {
+				grid-column-start: 1;
+				grid-column-end: 12;
+				font-size: 1rem;
+			}
+
+			@media @col-4 {
+				margin-top: -10px;
+			}
+
+			@media @col-6 {
+				grid-column-start: 3;
+				grid-column-end: 7;
+				margin-top: 14px;
+			}
+
+			@media @col-7 {
+				grid-column-start: 4;
+				grid-column-end: 8;
 			}
 		}
 	}
@@ -280,8 +407,10 @@
 
 	.footer {
 		&_bottom-sticked {
-			position: absolute;
-			bottom: 0;
+			@media @col-6 {
+				position: absolute;
+				bottom: 0;
+			}
 		}
 
 		&_bottom-sticked-fixed {
@@ -294,7 +423,25 @@
 		}
 	}
 	.footer_bottom-sticked, .footer_bottom-sticked-fixed {
-		width: 1200px;
+		@media @col-3 {
+			width: 505px;
+		}
+
+		@media @col-4 {
+			width: 682px;
+		}
+
+		@media @col-5 {
+			width: 855px;
+		}
+
+		@media @col-6 {
+			width: 1030px;
+		}
+
+		@media @col-7 {
+			width: 1200px;
+		}
 	}
 	.footer_bottom-sticked-fixed .grid::before, .footer_bottom-sticked-fixed .grid::after {
 		display: block;
@@ -317,7 +464,11 @@
 		font-family: 'IBM Plex Sans';
 
 		&__wrap {
-			margin-left: -8px;
+			margin: -15px 0;
+
+			@media @col-3 {
+				margin: 0 0 0 -8px;
+			}
 
 			&__label {
 				margin-top: -3px;
@@ -326,14 +477,23 @@
 					border: 1px solid #000;
 					border-radius: 3px;
 					padding: 0px 3px;
-					font-size: .75rem;
+					font-size: 1.4rem;
+
+					@media @col-3 {
+						font-size: .75rem;
+					}
 				}
 			}
 
 			&__description {
 				margin-top: 10px;
-				font-size: 1.2rem;
-				line-height: 1.5rem;
+				font-size: 1.75rem;
+				line-height: 2.25rem;
+
+				@media @col-3 {
+					font-size: 1.2rem;
+					line-height: 1.5rem;
+				}
 			}
 		}
 	}
@@ -352,8 +512,12 @@
 
 		&__form {
 			grid-column-start: 1;
-			grid-column-end: 10;
+			grid-column-end: 15;
 			position: relative;
+
+			@media @small {
+				grid-column-end: 10;
+			}
 
 			&__success {
 				position: absolute;
@@ -475,13 +639,18 @@
 	&__label {
 		padding-top: .65rem;
 		grid-column-start: 1;
-		grid-column-end: 2;
+		grid-column-end: 12;
+
+		@media @small {
+			grid-column-start: 1;
+			grid-column-end: 2;
+		}
 	}
 
 	&__element {
-		grid-column-start: 2;
-		grid-column-end: 12;
-		position: relative;
+		@media @small {
+			grid-column-start: 2;;
+		}
 
 		&-short {
 			grid-column-end: 3;
