--- a/css/style.less
+++ b/css/style.less
@@ -515,7 +515,11 @@
 			grid-column-end: 15;
 			position: relative;
 
-			@media @small {
+			@media @col-5 {
+				grid-column-end: 9;
+			}
+
+			@media @col-7 {
 				grid-column-end: 10;
 			}
 
@@ -524,7 +528,11 @@
 				top: 0;
 				z-index: 1;
 				font-size: 1.2rem;
-				margin-left: -1rem;
+				margin-bottom: 3rem;
+
+				@media @col-4 {
+					margin-left: -1rem;
+				}
 
 				&__alert {
 					box-sizing: border-box;
@@ -545,13 +553,80 @@
 		}
 
 		&__cover {
-			grid-column-start: 11;
-			grid-column-end: 13;
+			grid-column-start: 1;
+			grid-column-end: 15;
+
+			@media @col-3 {
+				grid-column-start: 1;
+				grid-column-end: 7;
+				margin-bottom: 27px;
+			}
+
+			@media @col-4 {
+				grid-column-start: 1;
+				grid-column-end: 5;
+			}
+
+			@media @col-5 {
+				grid-column-start: 10;
+				grid-column-end: 13;
+				margin-left: -39px;
+				margin-bottom: 0px;
+			}
+
+			@media @col-6 {
+				margin-left: 0;
+			}
+
+			@media @col-7 {
+				grid-column-start: 11;
+			}
 		}
 
-		.month-book {
-			grid-column-start: 13;
+		&__month-book {
+			grid-column-start: 1;
 			grid-column-end: 15;
+
+			@media @col-3 {
+				grid-column-start: 7;
+				grid-column-end: 11;
+			}
+
+			@media @col-4 {
+				grid-column-start: 5;
+				grid-column-end: 8;
+			}
+
+			@media @col-5 {
+				grid-column-start: 13;
+				grid-column-end: 15;
+			}
+
+			&__wrap {
+				margin-top: 0;
+
+				@media @col-3 {
+					margin: 0 24px 0 -57px;
+				}
+
+				@media @col-4 {
+					margin: 0 0 0 -33px;
+				}
+
+				@media @col-5 {
+					margin: 0 1px 0 -59px;
+					//margin: 0 -37px 0 -21px;
+				}
+
+				@media @col-6 {
+					//margin: 0 -58px 0 25px;
+					margin: 0 25px 0 -58px;
+				}
+
+				@media @col-7 {
+					margin: 0 0 0 -8px;
+				}
+			}
 		}
 	}
 
@@ -634,27 +709,98 @@
 	display: grid;
 	grid-template-columns: repeat(11, 1fr);
 	grid-column-gap: 15px;
-	grid-row-gap: 25px;
+	grid-row-gap: 10px;
+
+	@media @col-3 {
+		grid-row-gap: 25px;
+	}
 
 	&__label {
 		padding-top: .65rem;
 		grid-column-start: 1;
 		grid-column-end: 12;
 
-		@media @small {
-			grid-column-start: 1;
+		@media @col-3 {
 			grid-column-end: 2;
+		}
+
+		&_publishing-year-margin-fix {
+			@media @col-3 {
+				margin-top: -.95rem;
+			}
 		}
 	}
 
 	&__element {
-		@media @small {
+		grid-column-start: 1;
+		grid-column-end: 12;
+		position: relative;
+
+		@media @col-3 {
 			grid-column-start: 2;;
 		}
 
-		&-short {
+		&_short {
 			grid-column-end: 3;
-			margin-right: -14px;
+			margin-right: -27px;
+
+			@media @col-3 {
+				margin-right: -41px;
+			}
+
+			@media @col-4 {
+				margin-right: -22px;
+			}
+
+			@media @col-5 {
+				margin-right: -42px;
+			}
+
+			@media @col-6 {
+				margin-right: -33px;
+			}
+
+			@media @col-7 {
+				margin-right: -14px;
+			}
+		}
+
+		&_checkbox {
+			padding-top: 0.65rem;
+
+			@media @col-3 {
+				padding-top: 0;
+			}
+
+			&-month-book {
+				@media @col-3 {
+					margin-top: -1.2rem;
+				}
+			}
+
+			&-price {
+				@media @col-3 {
+					margin-top: -.3rem;
+				}
+			}
+		}
+
+		&_by-checkbox {
+			margin-top: 0 !important;
+
+			@media @col-3 {
+				margin-top: -0.75rem !important;
+			}
+		}
+
+		&_password {
+			@media @col-3 {
+				grid-column-end: 6;
+			}
+
+			@media @col-4 {
+				grid-column-end: 5;
+			}
 		}
 
 		&__input {
@@ -674,15 +820,30 @@
 		}
 
 		&__textarea {
-			height: 5.4rem;
+			height: 6.2rem;
 			resize: none;
 		}
 
 		&__wrap-for-price {
 			display: grid;
-			grid-template-columns: repeat(11, 1fr);
+			grid-template-columns: repeat(5, 1fr);
 			grid-gap: 15px;
 
+			@media @col-3 {
+				grid-template-columns: repeat(7, 1fr);
+			}
+
+			@media @col-4 {
+				grid-template-columns: repeat(10, 1fr);
+			}
+
+			@media @col-5 {
+				grid-template-columns: repeat(6, 1fr);
+			}
+
+			@media @col-6 {
+				grid-template-columns: repeat(8, 1fr);
+			}
 
 			&__currency-sign {
 				padding-top: .6rem;
@@ -753,6 +914,12 @@
 				box-shadow: none !important;
 				color: rgba(0, 0, 0, .25);
 			}
+		}
+	}
+
+	&__labelelement_publishing-year-margin-fix {
+		@media @col-3 {
+			margin-top: -.95rem;
 		}
 	}
 
