--- a/css/style.less
+++ b/css/style.less
@@ -51,12 +51,11 @@
 
 .page {
 	overflow-y: scroll;
-	margin: 15px;
+	margin: 15px auto;
+	width: 290px;
 
 	@media @col-3 {
 		width: 505px;
-		margin-left: auto;
-		margin-right: auto;
 	}
 
 	@media @col-4 {
