--- a/css/style.less
+++ b/css/style.less
@@ -465,17 +465,28 @@
 		}
 
 		&_bottom-sticked-fixed {
-			z-index: 2;
-			position: fixed;
-			bottom: -217px;
+			@media @col-4 {
+				z-index: 2;
+				position: fixed;
+				bottom: -412px;
 
-			&:hover {
-				animation: showFooter .25s linear !important;
-				bottom: 0;
+				&:hover {
+					animation: showFooterCol5 .35s linear !important;
+					bottom: 0;
+				}
+			}
+
+			@media @col-6 {
+				bottom: -217px;
+
+				&:hover {
+					animation: showFooter .25s linear !important;
+				}
 			}
 		}
 
 		&__hint {
+			display: none;
 			width: 173px;
 			margin: 0 auto;
 			padding: 5px 0 7px;
@@ -486,6 +497,10 @@
 			-webkit-backdrop-filter: blur(5px);
 			backdrop-filter: blur(5px);
 
+			@media @col-4 {
+				display: block;
+			}
+
 			.pseudolink {
 				cursor: default;
 				color: #000;
@@ -495,9 +510,12 @@
 
 		&__main {
 			background: #fff;
-			border-top: 3px solid rgba(240, 240, 240, .9);
-			-webkit-backdrop-filter: blur(5px);
-			backdrop-filter: blur(5px);
+
+			@media @col-4 {
+				border-top: 3px solid rgba(240, 240, 240, .9);
+				-webkit-backdrop-filter: blur(5px);
+				backdrop-filter: blur(5px);
+			}
 		}
 	}
 
@@ -1007,4 +1025,14 @@
 @keyframes closeFooter {
 	from {bottom: 0;}
 	to {bottom: -217px;}
+}
+
+@keyframes showFooterCol5 {
+	from {bottom: -412px;}
+	to {bottom: 0;}
+}
+
+@keyframes closeFooterCol5 {
+	from {bottom: 0;}
+	to {bottom: -412px;}
 }
