--- a/css/style.less
+++ b/css/style.less
@@ -162,7 +162,6 @@
 
 		@media @col-6 {
 			grid-template-columns: repeat(6, 1fr);
-			//grid-row-gap: 30px;
 		}
 
 		@media @col-7 {
@@ -180,6 +179,7 @@
 			height: 465px;
 			padding: .5rem;
 			background: #fff2d5;
+			transition: box-shadow .35s ease-out, color .35s ease-out;
 
 			@media @col-3 {
 				max-width: 159px;
@@ -373,6 +373,11 @@
 						height: 32px;
 						padding: 9px;
 					}
+
+					&__icon {
+						fill: #000;
+						transition: fill .35s ease-out;
+					}
 				}
 			}
 		}
@@ -442,11 +447,13 @@
 			cursor: pointer;
 			color: #CD0404;
 			box-shadow: 0px 0px 0px 1px #ec6040 inset;
+			transition: none;
 		}
 
 		.grid__item:hover {
 			.grid__item__admin_edit__icon {
 				fill: #cd0404;
+				transition: none;
 			}
 		}
 	}
