--- a/css/style.less
+++ b/css/style.less
@@ -179,7 +179,7 @@
 			height: 465px;
 			padding: .5rem;
 			background: #fff2d5;
-			transition: box-shadow .35s ease-out, color .35s ease-out;
+			transition: box-shadow .35s ease-out, color .35s ease-out, -webkit-text-fill-color .35s ease-out;
 
 			@media @col-3 {
 				max-width: 159px;
@@ -227,6 +227,7 @@
 			}
 
 			&_link-to-book-adding {
+				font-family: 'IBM Plex Serif';
 				background: none;
 				text-align: center;
 				font-size: 3.6rem;
@@ -234,9 +235,13 @@
 				margin-top: -36px;
 				margin-left: -7px;
 				box-shadow: none !important;
+				background: linear-gradient(to bottom, #6FFC3E 0%, #1E6B07 100%);
+				-webkit-background-clip: text;
+				-webkit-text-fill-color: transparent;
+				//color: #6FFC3E;
 
 				@media @col-3 {
-					font-size: 11.5rem;
+					font-size: 10rem;
 					margin: 0;
 					height: auto;
 				}
@@ -451,6 +456,8 @@
 		}
 
 		.grid__item:hover {
+			-webkit-text-fill-color: #cd0404;
+
 			.grid__item__admin_edit__icon {
 				fill: #cd0404;
 				transition: none;
@@ -496,13 +503,11 @@
 			display: none;
 			width: 173px;
 			margin: 0 auto;
-			padding: 5px 0 7px;
+			padding: 5px 0 6px;
 			font-family: 'IBM Plex Sans';
 			text-align: center;
 			border-radius: 30px 30px 0 0;
-			background: rgba(240, 240, 240,.9);
-			-webkit-backdrop-filter: blur(5px);
-			backdrop-filter: blur(5px);
+			background: #000;
 
 			@media @col-4 {
 				display: block;
@@ -510,8 +515,7 @@
 
 			.pseudolink {
 				cursor: default;
-				color: #000;
-				border-bottom-color: rgba(0, 0, 0, .75);
+				color: #fff;
 			}
 		}
 
@@ -519,7 +523,7 @@
 			background: #fff;
 
 			@media @col-4 {
-				border-top: 3px solid rgba(240, 240, 240, .9);
+				border-top: 1px solid #000;
 				-webkit-backdrop-filter: blur(5px);
 				backdrop-filter: blur(5px);
 			}
@@ -579,7 +583,7 @@
 
 				&__text {
 					border: 1px solid #000;
-					border-radius: 3px;
+					border-radius: 4px;
 					padding: 0px 3px;
 					font-size: 1.4rem;
 
