--- a/css/style.less
+++ b/css/style.less
@@ -508,14 +508,10 @@
 			text-align: center;
 			border-radius: 30px 30px 0 0;
 			background: #000;
+			color: #fff;
 
 			@media @col-4 {
 				display: block;
-			}
-
-			.pseudolink {
-				cursor: default;
-				color: #fff;
 			}
 		}
 
@@ -526,6 +522,22 @@
 				border-top: 1px solid #000;
 				-webkit-backdrop-filter: blur(5px);
 				backdrop-filter: blur(5px);
+			}
+
+			&__middle-dot {
+				display: none;
+
+				@media @col-4 {
+					display: inline;
+				}
+			}
+
+			&__space {
+				display: inline;
+
+				@media @col-3 {
+					display: none;
+				}
 			}
 		}
 	}
