Book editing with saving in local storage

--- a/css/style.less
+++ b/css/style.less
@@ -966,6 +966,19 @@
 			white-space: nowrap;
 		}
 
+		&__warning-small {
+			position: absolute;
+			top: 48px;
+			left: 11px;
+			font-size: .75rem;
+			color: #ec6040;
+			white-space: nowrap;
+
+			&-lower {
+				top: 101px;
+			}
+		}
+
 		&__label {
 			cursor: pointer;
 			position: relative;
