Star in birkas, no unuseful hover on books, footer text fix, fix with open edit page

--- a/css/style.less
+++ b/css/style.less
@@ -318,6 +318,8 @@
 					z-index: 2;
 					bottom: -5px;
 					right: -10px;
+					color: #fff;
+					-webkit-text-fill-color: #fff;
 					background: linear-gradient(#777 0%, #000 100%);
 					border-radius: 50%;
 					width: 100px;
@@ -956,7 +958,8 @@
 		&__label {
 			cursor: pointer;
 			position: relative;
-			color: #000;
+			color: #000 !important;
+			-webkit-text-fill-color: #000;
 
 			&__checkbox {
 				opacity: 0;
